# lenti

./: .gitignore  Cargo.toml  README.md
src/: input.rs  main.rs  model.rs
src/output/: html.rs  mod.rs  thumbnail.rs
templates/: carousel.css  collection.hbs  collections.hbs  gallery.hbs  index.css
